// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div
  class="sc-bxivhb ewuPkI sc-bwzfXH jIEWCi"
>
  <div
    class="sc-ifAKCX ezQlwD sc-bdVaJa fpcbkF"
  />
  <div
    class="sc-EHOje cTZJmS sc-bdVaJa fpcbkF"
  />
  <div
    class="sc-bZQynM gRKxIf sc-bwzfXH jIEWCi"
  />
</div>
`;

exports[`snapshot 2`] = `
<div
  class="sc-bxivhb ewuPkI sc-bwzfXH jIEWCi"
>
  <div
    class="sc-ifAKCX ezQlwD sc-bdVaJa fpcbkF"
  >
    <p>
      left
    </p>
  </div>
  <div
    class="sc-EHOje cTZJmS sc-bdVaJa fpcbkF"
  >
    <p>
      center
    </p>
  </div>
  <div
    class="sc-bZQynM gRKxIf sc-bwzfXH jIEWCi"
  >
    <p>
      right
    </p>
  </div>
</div>
`;
